<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Advance_Coordinators" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="WoR-CY-CdA">
                                <rect key="frame" x="20" y="84" width="374" height="184"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b70-Az-792">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="tintColor" red="0.93781250000000005" green="0.93781250000000005" blue="0.93781250000000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Create Account"/>
                                        <connections>
                                            <action selector="didTapCreateAccount:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fNw-et-Zhd"/>
                                        </connections>
                                    </button>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tJT-e3-B0k">
                                        <rect key="frame" x="0.0" y="48" width="374" height="40"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="fFz-wc-DZO"/>
                                        </constraints>
                                    </view>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CFP-63-Ltc">
                                        <rect key="frame" x="0.0" y="96" width="374" height="41"/>
                                        <segments>
                                            <segment title="Product 1"/>
                                            <segment title="Product 2"/>
                                        </segments>
                                        <color key="tintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                    </segmentedControl>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GL6-1i-8aK">
                                        <rect key="frame" x="0.0" y="144" width="374" height="40"/>
                                        <color key="backgroundColor" red="0.36106375899999998" green="0.6872085631" blue="0.58677261599999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="tintColor" red="0.93781250000000005" green="0.93781250000000005" blue="0.93781250000000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Buy Subscription"/>
                                        <connections>
                                            <action selector="didTapBuySubscription:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ACw-Hi-2EM"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WoR-CY-CdA" secondAttribute="trailing" constant="20" id="2cx-0Z-ReI"/>
                            <constraint firstItem="WoR-CY-CdA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="B8E-0u-VlF"/>
                            <constraint firstItem="WoR-CY-CdA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="PZ0-EQ-iXS"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="productSegments" destination="CFP-63-Ltc" id="TtM-d7-b4v"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="139" y="108"/>
        </scene>
        <!--ProfileVC-->
        <scene sceneID="dCV-dZ-sqZ">
            <objects>
                <viewController storyboardIdentifier="ProfileVC" id="iK9-VR-hCX" customClass="ProfileVC" customModule="Advance_Coordinators" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="tHq-dD-SyJ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="xbY-M9-ng7">
                                <rect key="frame" x="20" y="64" width="374" height="30"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WKD-Hn-xVY">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                        <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="tintColor" red="0.93781250000000005" green="0.93781250000000005" blue="0.93781250000000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Settings"/>
                                        <connections>
                                            <action selector="didTapCreateEditSettings:" destination="iK9-VR-hCX" eventType="touchUpInside" id="NEw-f1-oxW"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="aFO-Pj-fBh" firstAttribute="trailing" secondItem="xbY-M9-ng7" secondAttribute="trailing" constant="20" id="FOC-oI-TIF"/>
                            <constraint firstItem="xbY-M9-ng7" firstAttribute="top" secondItem="aFO-Pj-fBh" secondAttribute="top" constant="20" id="iLl-PB-ydo"/>
                            <constraint firstItem="xbY-M9-ng7" firstAttribute="leading" secondItem="aFO-Pj-fBh" secondAttribute="leading" constant="20" id="mRq-lT-YBh"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="aFO-Pj-fBh"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BDn-sT-W2V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="133" y="914"/>
        </scene>
        <!--SettingsVC-->
        <scene sceneID="YH6-Tm-OCF">
            <objects>
                <viewController storyboardIdentifier="SettingsVC" id="tcY-Oa-Bnr" customClass="SettingsVC" customModule="Advance_Coordinators" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="pKU-dY-CxC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="T0Y-1J-TjD"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eYh-Ad-K7b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="909" y="913"/>
        </scene>
        <!--Buy View Controller-->
        <scene sceneID="8Os-Xs-sjv">
            <objects>
                <viewController storyboardIdentifier="BuyViewController" id="LtQ-Qy-yeg" customClass="BuyViewController" customModule="Advance_Coordinators" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5uL-iN-iV9">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="IPP-cw-Ys1"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="KJw-YF-VRS" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="910" y="108"/>
        </scene>
        <!--Create View Controller-->
        <scene sceneID="dki-yF-WRz">
            <objects>
                <viewController storyboardIdentifier="CreateViewController" id="UA9-Wt-yzE" customClass="CreateViewController" customModule="Advance_Coordinators" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Ygq-ZO-xFW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="OgF-w0-jcO"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="JZp-dc-JkG" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1612" y="108"/>
        </scene>
    </scenes>
</document>
