//
//  ProfileVC.swift
//  Advance Coordinators
//
//  Created by Johandre Delgado  on 08/11/2019.
//  Copyright © 2019 Johandre Delgado . All rights reserved.
//

import UIKit

class ProfileVC: UIViewController , Storyboarded {
    
    weak var coordinator: ProfileCoordinator?

    override func viewDidLoad() {
        super.viewDidLoad()

        self.title = "Profile"
    }
    
    
    
    
    @IBAction private func didTapCreateEditSettings(_ sender: UIButton) {
        print("didTapCreateAccount.")
        coordinator?.editSettings()
    }
    

   

}
