//
//  Advance_CoordinatorsUITests.swift
//  Advance CoordinatorsUITests
//
//  Created by Johandre Delgado  on 09/11/2019.
//  Copyright © 2019 Johandre Delgado . All rights reserved.
//

import XCTest

class Advance_CoordinatorsUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    

    func testExample() {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()
        
        snapshot("0Launch")

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
//        let app = XCUIApplication()
        app/*@START_MENU_TOKEN@*/.buttons["Product 2"]/*[[".segmentedControls.buttons[\"Product 2\"]",".buttons[\"Product 2\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.buttons["Buy Subscription"].tap()
        app.navigationBars["Buy Product # 2"].buttons["Main"].tap()
        app.buttons["Create Account"].tap()
        app.navigationBars["Account"].buttons["Main"].tap()
        
        let tabBarsQuery = app.tabBars
        tabBarsQuery.buttons["Contacts"].tap()
        app.buttons["Settings"].tap()
        app.navigationBars["Settings"].buttons["Profile"].tap()
        tabBarsQuery.buttons["Favorites"].tap()
    }

    func testLaunchPerformance() {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
